--- a/capcap/WebContent/css/design.css
+++ b/capcap/WebContent/css/design.css
@@ -3,6 +3,11 @@ body {
 	font-size:  2em;
 	text-align: center;
 	width: 		100%;
+	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
+
+h1{
+	font-size: 1.6em;
 }
 
 #contaifner-main {
@@ -16,6 +21,32 @@ body {
     border-radius: 5px;
     margin: 0 auto;
     color: #000000;
+    font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
+
+.belize-hole-flat-button {
+  position: relative;
+  vertical-align: top;
+  width: 100%;
+  height: 60px;
+  padding: 0;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  background: #2980b9;
+  border: 0;
+  border-bottom: 2px solid #2475ab;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #2475ab;
+  box-shadow: inset 0 -2px #2475ab;
+}
+
+.belize-hole-flat-button:active {
+  top: 1px;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 #button:hover {
