--- a/capcap/WebContent/css/table-design.css
+++ b/capcap/WebContent/css/table-design.css
@@ -1,13 +1,67 @@
+html {
+	color: white;
+  font-family: sans-serif; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+  height: 100%;
+  font-size: 30px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background: #70bg32;
+  background-repeat:no-repeat;
+  background: -webkit-linear-gradient( to left top, #09203f, #537895);
+  background: -moz-linear-gradient( to left top, #09203f, #537895);
+  background: -ms-linear-gradient( to left top, #09203f, #537895);
+  background: -o-linear-gradient( to left top, #09203f, #537895);
+  background: linear-gradient( to left top, #09203f, #537895);
+}
+
+body {
+	font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    border: 1px solid #ddd;
 }
 
 th, td {
-    text-align: left;
-    padding: 8px;
+    text-align: center;
+    padding: 16px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+a {
+	color: white;
+	font-size: 50px;
+}
+
+h1 {
+	text-align: center;
+}
+tr:nth-child(even){background-color: black}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 90px;
+  height: 90px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
