--- a/capcap/WebContent/css/video-design.css
+++ b/capcap/WebContent/css/video-design.css
@@ -113,22 +113,22 @@ div.righticon {
 	text-align: center;
 }
 
-#police-icon {
+#icon6 #male-icon{
 	color:#0000ff;
 	text-align: center;
 }
 
-#ambulance-icon {
+#icon7 #male-icon {
 	color:#ffffff;
 	text-align: center;
 }
 
-#firefighters-icon {
+#icon8 #male-icon {
 	color:red;
 	text-align: center;
 }
 
-#rescue-team-icon {
+#icon9 #male-icon {
 	color:#964B00;
 	text-align: center;
 }
